[package]
name = "io"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
rdev = "0.5.3"
windows = "0.61.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
